syntax = "proto3";

option csharp_namespace = "GrpcServiceWithRealishScenario";

package greet;

// The greeting service definition.
service GreeterA {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

service GreeterB {
	// Sends a greeting
	rpc SayHelloB (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
